# Century-Health-Data-Engineering-Task

./: 22.2.0  README.md  kedro.yml  pyproject.toml  requirements.txt
config/: catalog.yml  parameters.yml
data/raw/: conditions.xlsx  encounters.parquet.xlsx  medications.xlsx  patients.xlsx  symptoms.xlsx
logs/: logging_config.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
notebooks/: data_assessment.ipynb  exploratory_analysis.ipynb
src/century_health_data/: __init__.py  data_analysis.py  data_cleaning.py  db_operations.py  merge.py  pipeline.py
src/century_health_data/nodes/: clean.py  connect.py  merge.py  structure.py
